samples/_failures_safe/1761428722_800fc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85223e93.c: In function ‘main’:
./samples/SAFE/__tmp_85223e93.c:172:5: error: expected expression at end of input
  172 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_85223e93.c:172:5: error: expected declaration or statement at end of input
